Improve ABI separation
There's now a x86 directory for x86 things. asm headers can come from it
or from arch/x86. This works by generating a 1-line header with an
#include.

--- a/arch/ish/Makefile
+++ b/arch/ish/Makefile
@@ -12,18 +12,10 @@ ifdef CONFIG_HOST_DARWIN
 	KBUILD_LDFLAGS += -platform_version macos 10.15 10.15 -arch x86_64 # TODO
 endif
 
-KBUILD_CPPFLAGS += -I$(srctree)/arch/ish/include/abi
-
-KBUILD_CFLAGS += -ferror-limit=0
-
-# TODO: this bugs me. we really only want <asm/user.h> but it can result in
-# other things getting in without anyone knowing.
-#KBUILD_CPPFLAGS += -I$(srctree)/arch/x86/include
-
 USER_CFLAGS = -I$(srctree)/arch/ish/include
 export USER_CFLAGS
 
-core-y += arch/ish/kernel/ arch/ish/mm/ arch/ish/abi/ arch/ish/drivers/ arch/ish/net/
+core-y += arch/ish/kernel/ arch/ish/mm/ arch/ish/drivers/ arch/ish/net/
 head-y += arch/ish/kernel/sections.o
 
 core-y += arch/ish/$(EMULATOR)/
@@ -32,10 +24,10 @@ ifeq ($(EMULATOR),ishemu)
 	KBUILD_CPPFLAGS += -I../..
 endif
 
+include arch/ish/Makefile.abi
+
 export CFLAGS_vmlinux := -lish_emu -L../../build
 vmlinux: ../../build/libish_emu.a
 
-archheaders:
-	$(Q)$(MAKE) $(build)=arch/ish/syscalls all
-
+# TODO: $(SUBARCH) doesn't work because it's x86_64
 UTS_MACHINE := i686
