--- a/arch/ish/x86/syscalls/Makefile
+++ b/arch/ish/x86/syscalls/Makefile
@@ -1,8 +1,5 @@
-PHONY += subarchheaders
-subarchheaders:
+PHONY += all
+all:
 	$(Q)$(MAKE) $(build)=arch/x86/entry/syscalls all
 
 # TODO: declare outputs?
-
-PHONY += all
-all: subarchheaders
