--- a/arch/ish/include/uapi/asm/Kbuild
+++ b/arch/ish/include/uapi/asm/Kbuild
@@ -1,3 +1,2 @@
-generated-y += unistd_32.h
-generated-y += unistd_64.h
-generated-y += unistd_x32.h
+include $(srctree)/arch/ish/$(ABI_ARCH)/include/uapi/asm/Kbuild
+generated-y += $(redir-abi-y) $(redir-arch-y)
