--- a/arch/ish/configs/app_defconfig
+++ b/arch/ish/configs/app_defconfig
@@ -17,6 +17,7 @@ CONFIG_EXPERT=y
 # CONFIG_KALLSYMS is not set
 CONFIG_ISH_LINK_OBJECT=y
 CONFIG_HOSTFS=y
+# CONFIG_STDIO_CONSOLE is not set
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_NET=y
